--- a/style.css
+++ b/style.css
@@ -2,9 +2,42 @@ body {
     margin: 0;
 }
 
+p {
+    margin: 0;
+}
+
 .header {
     width: 600px;
 }
 
+.logo {
+    padding-left: 30px;
+}
 
+.phone {
+    padding-right: 30px;
+}
 
+.logo,
+.phone {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.phone a {
+    font-size: 16px;
+    line-height: 24px;
+    color: #25252c;
+    font-weight: bold;
+    font-family: "Arial";
+    text-decoration: none;
+}
+
+.contact {
+    font-size: 13px;
+    line-height: 18px;
+    color: #9999a6;
+    font-style: italic;
+    font-family: "Arial";
+    text-align: right;
+}
