--- a/style.css
+++ b/style.css
@@ -41,3 +41,57 @@ p {
     font-family: "Arial";
     text-align: right;
 }
+
+h1 {
+    padding-left: 30px;
+    font-size: 24px;
+    line-height: 24px;
+    color: #24242b;
+    font-weight: bold;
+    font-family: "Arial";
+}
+
+.main-img {
+    padding-bottom: 15px;
+}
+
+.main-text {
+    margin-bottom: 20px;
+    padding-left: 30px;
+    font-size: 14px;
+    line-height: 24px;
+    color: #666666;
+    font-family: "Arial";
+}
+
+.button {
+    padding-left: 30px;
+    display: inline-block;
+    text-decoration: none;
+}
+
+.button td {
+    width: 180px;
+    height: 40px;
+    border-radius: 20px;
+}
+
+.button a {
+    text-decoration: none;
+}
+
+.button h4 {
+    margin: 0;
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: bold;
+    font-family: "Arial";
+    text-align: center;
+
+}
+
+.grey td {
+    width: 200px;
+    height: 195px;
+    background-color: #ededf5;
+}
