--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1 {
 }
 
 .button {
+    margin-bottom: 25px;
     padding-left: 30px;
     display: inline-block;
     text-decoration: none;
@@ -87,12 +88,38 @@ h1 {
     font-weight: bold;
     font-family: "Arial";
     text-align: center;
+}
 
+.grey {
+    margin-top: 25px;
 }
 
 .grey td {
+    padding-left: 30px;
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-bottom: 30px;
     width: 200px;
     height: 195px;
     background-color: #ededf5;
+    text-align: center;
+}
+
+.grey h5 {
+    font-size: 14px;
+    line-height: 18px;
+    color: #24242b;
+    font-weight: bold;
+    font-family: "Arial";
+    text-align: center;
+}
+
+.grey p {
+    width: 166px;
+    height: 58px;
+    font-size: 13px;
+    line-height: 18px;
+    color: #666666;
+    font-family: "Arial";
     text-align: center;
 }
